I added a button to the html file to trigger the start of the game.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <script src="rockPaperScissors.js"></script>
+
+    <button id="startButton">Ready!</button>
+    <pre id="choice"></pre>
 </body>
 </html>
