--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="rockPaperScissors.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <script src="rockPaperScissors.js"></script>
 
-    <button id="startButton">Ready!</button>
-    <pre id="choice"></pre>
-</body>
+        <div class="gameTrigger">
+            <p>Let's play a game!</p>
+            <button id="startButton">Ready!</button>
+        </div>
+    
+        <pre id="choice"></pre>
+    </body>
 </html>
