updated the container on the html.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <script src="rockPaperScissors.js"></script>
 
-        <div class="gameTrigger">
+        <div id="game-trigger">
             <p>Let's play a game!</p>
             <button id="startButton">Ready!</button>
         </div>
